# multi_ahe

./: .gitignore  CLAUDE.md  DURUM.md  README.md  RESUME.md  ahe_mrta_ana_md_q1_csv_first_updated (1).md  ahe_mrta_recent_comparison_methods_compact (2).md  ana_method.md  durum.md  fastdds_udp_only.xml  generate_arena_map_png.py  install_ros2_gazebo.sh  record_gazebo_view.sh  run_all.sh  run_campaign.sh  run_experiments_robust.sh  run_gazebo_experiments.sh  run_gazebo_validation.sh  run_paper_experiments_v3.sh  run_rviz.sh  run_until_complete.sh  run_video_experiments.sh
.claude/: settings.local.json
docs/: AHE_FAIRNESS_IMPROVEMENT_RESEARCH.md  F45_FAIRNESS_DEEP_DIVE.md  F58_REACHABILITY_FIRST_RESEARCH.md  ahe_method_detailed.tex  ahe_method_diagram.excalidraw  source_mapping.md
paper/: REVISION_STATUS.md  main.tex  main_tr.tex  references.bib
paper/figure/: fig1.drawio  fig2.drawio
paper/table/: ablation.tex  ablation_tr.tex  allocation_only.tex  allocation_only_tr.tex  as_matrices.tex  as_matrices_tr.tex  f58_allocation.tex  f58_allocation_tr.tex  f58_gazebo.tex  f58_gazebo_scales.tex  f58_gazebo_scales_tr.tex  f58_gazebo_tr.tex  fitness.tex  fitness_tr.tex  hormones.tex  hormones_tr.tex  latex_deadline_table.tex  latex_effectsize_table.tex  latex_effectsize_table_tr.tex  latex_efficiency_table.tex  latex_efficiency_table_tr.tex  latex_main_table.tex  proto_vectors.tex  proto_vectors_tr.tex  scalability.tex  scalability_tr.tex  scales.tex  scales_tr.tex
results/reports/: result_interpretation.md  statistical_tables.md  summary_report.md
scripts/: _compare_v31.py  ablate_context.py  ablation_edps.py  ahe_lever_explore.py  capture_fig7_synced.sh  capture_method_shots.sh  cleanup_ros_gz.sh  compare_f53_gazebo.py  compare_f58_gazebo.py  consolidate_results.py  cron_reboot_resume.sh  cron_status_report.sh  diag_wlbal.py  exp_dynsel.py  exp_fairness.py  exp_lib.sh  exp_lightsel.py  exp_status.sh  export_experiment_pngs.py  generate_obstacle_map.py  generate_scenario_maps.py  load_guard.sh  make_ahe_diagram.py  make_extra_tables.py  paradigm_audit.py  plot_all_paths.py  plot_arena.py  plot_method_paths.py  plot_results.py  recompute_stability_metrics.py  render_arena_map.py  report_generator.py  run_experiments.py  run_f53_gazebo_validation.sh  run_f58_benchmark_until_complete.sh  run_f58_density_until_complete.sh  run_f58_gazebo_validation.sh  run_f58_scales_until_complete.sh  run_gazebo_matrix.sh  sim_metric_stats.py  (+9 more)
src/m_ahe_ecosystem_manager/: package.xml  setup.cfg  setup.py
src/m_ahe_ecosystem_manager/m_ahe_ecosystem_manager/: ecosystem_manager_node.py  ecosystem_test_pub.py
src/m_ahe_evaluation/: package.xml  setup.cfg  setup.py
src/m_ahe_mrta_bringup/: CMakeLists.txt  package.xml
src/m_ahe_mrta_bringup/config/: gz_gui_ogre1.config  multi_robot.rviz  phase9_demo.rviz
src/m_ahe_mrta_bringup/launch/: multi_robot_gazebo.launch.py  multi_robot_helpers.py  multi_robot_nav2.launch.py  nav2_single_robot.launch.py  phase12_visual_test.launch.py  phase2_test_messages.launch.py  phase6_task_system.launch.py  phase7_baseline_system.launch.py  phase8_ahe_system.launch.py  phase9_demo.launch.py  phase9_experiments.launch.py  phase9_experiments_gui.launch.py  phase9_record.launch.py  robots_and_nav2.launch.py  robots_and_nav2_gui.launch.py  single_robot_gazebo.launch.py
src/m_ahe_mrta_bringup/m_ahe_mrta_bringup/: odom_to_tf.py  tf_relay_node.py
src/m_ahe_mrta_bringup/src/: nav2_goal_sender.cpp  odom_to_tf.cpp
src/m_ahe_mrta_gazebo/: CMakeLists.txt  package.xml
src/m_ahe_mrta_gazebo/config/: all_robots_bridge.yaml  robot_1_bridge.yaml
src/m_ahe_mrta_gazebo/worlds/: ahe_inspection_arena.sdf  ahe_inspection_mvp.sdf
src/m_ahe_mrta_msgs/: CMakeLists.txt  package.xml
src/m_ahe_mrta_msgs/msg/: AllocationEvent.msg  EcosystemState.msg  LocalExecutionFeedback.msg  OptimizedTaskQueue.msg  RobotStatusSummary.msg  TaskInfo.msg  TaskPool.msg  TaskWaypoint.msg
src/m_ahe_nav2_config/: CMakeLists.txt  package.xml
src/m_ahe_nav2_config/maps/: empty_map.yaml  obstacle_map.pgm  obstacle_map.yaml
src/m_ahe_nav2_config/params/: nav2_params.yaml
src/m_ahe_nav2_config/urdf/: waffle_pi.urdf
src/m_ahe_recovery_manager/: package.xml  setup.cfg  setup.py
src/m_ahe_robot_interface/: package.xml  setup.cfg  setup.py
src/m_ahe_robot_interface/m_ahe_robot_interface/: robot_interface_node.py  robot_status_test_pub.py
src/m_ahe_task_allocator/: package.xml  setup.cfg  setup.py
src/m_ahe_task_allocator/m_ahe_task_allocator/: ahe_allocator_node.py  baseline_allocator_node.py  experiment_runner_node.py  geodesic_cost.py  placement.py  task_queue_test_pub.py
src/m_ahe_task_allocator/m_ahe_task_allocator/baselines/: __init__.py  ahe_variants.py  auction_based.py  base_allocator.py  big_mrta.py  consensus_dbta.py  deadline_aware.py  greedy_nearest.py  rostam_ea.py  static_weighted.py
src/m_ahe_task_manager/: package.xml  setup.cfg  setup.py
src/m_ahe_task_manager/m_ahe_task_manager/: gz_path_visualizer_node.py  task_manager_node.py  task_pool_test_pub.py  task_visualizer_node.py
tests/: test_compare_f53_gazebo.py  test_compare_f58_gazebo.py  test_fairness_and_context.py
