<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m_ahe_evaluation</name>
  <version>0.1.0</version>
  <description>
    Evaluation and CSV logging for AHE-MRTA experiments.
    Implements event-based CSV logging (task_events, allocation_events, ecosystem_metrics),
    low-frequency sampled robot_state_timeseries (1-2 Hz, configurable),
    buffered CSV writing, experiment metadata generation, and post-run
    consolidation scripts. Plots are generated ONLY after simulation runs complete.
    No plotting during simulation. CSV files are the primary data source; rosbags are optional.
  </description>
  <maintainer email="dr.oguz.misir@gmail.com">AHE-MRTA Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>m_ahe_mrta_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
