<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m_ahe_mrta_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo Harmonic world, robot spawn, and target marker models for AHE-MRTA.
    Uses ros_gz integration (not Gazebo Classic APIs).
    Provides the inspection environment with corridors, open areas, and task zones.
  </description>
  <maintainer email="dr.oguz.misir@gmail.com">AHE-MRTA Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>m_ahe_mrta_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
