<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m_ahe_task_manager</name>
  <version>0.1.0</version>
  <description>
    Task pool management node for AHE-MRTA.
    Manages the global task pool, handles dynamic task activation by time or event,
    tracks task state (active, completed, failed, expired), and publishes TaskPool messages.
  </description>
  <maintainer email="dr.oguz.misir@gmail.com">AHE-MRTA Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>m_ahe_mrta_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
